# tic-data-etl

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
crypto/binance/binance-spot-loader/: .gitignore  Dockerfile  pyproject.toml
crypto/binance/binance-spot-loader/db/: db.sql  spot_1d.sql  spot_1d_id.sql  spot_1d_latest.sql  spot_1h.sql  spot_1h_id.sql  spot_1h_latest.sql
crypto/binance/binance-spot-loader/src/binance_spot_loader/: __main__.py
crypto/binance/binance-spot-loader/src/binance_spot_loader/persistance/: basesource.py  source.py  target.py
crypto/binance/binance-spot-loader/src/binance_spot_loader/queries/: spot.py  spot_latest.py
equities/alpaca/alpaca-spot-loader/: Dockerfile  pyproject.toml
equities/alpaca/alpaca-spot-loader/db/: db.sql  spot_1d.sql  spot_1d_id.sql  spot_1d_latest.sql  spot_1h_id.sql
equities/alpaca/alpaca-spot-loader/src/alpaca_spot_loader/: __main__.py  date_helpers.py
equities/alpaca/alpaca-spot-loader/src/alpaca_spot_loader/model/: __init__.py  bar_record.py  entity.py  latest.py
equities/alpaca/alpaca-spot-loader/src/alpaca_spot_loader/persistance/: source.py
equities/alpaca/alpaca-spot-loader/src/alpaca_spot_loader/queries/: __init__.py  spot.py
equities/src/alpaca_spot_loader/: __main__.py  requirements.txt
equities/src/alpaca_spot_loader/db/: spot_1h.sql  spot_1h_latest.sql
equities/src/alpaca_spot_loader/persistance/: source.py  target.py
equities/src/alpaca_spot_loader/queries/: spot_latest.py
