[tool.poetry]
name = "binance-spot-loader"
version = "0.1.0"
description = ""
authors = ["VascoMS"]
readme = "README.md"
packages = [{include = "alpaca_spot_loader"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
psycopg2-binary = "^2.9.6"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
